--- a/src/app/components/tecnico/tecnico-update/tecnico-update.component.html
+++ b/src/app/components/tecnico/tecnico-update/tecnico-update.component.html
@@ -1,6 +1,6 @@
 <div class="container mat-elevation-z8">
     <form class="form">
-        <h1 class="fullWidth">Cadastrar Tecnico</h1>
+        <h1 class="fullWidth">Atualizar</h1>
         <img class="fullWidth" src="assets/img/tecnico-create.svg" alt="Help Desk - Dicas de um DEV">
 
         <section class="section">
@@ -40,8 +40,8 @@
                
               </mat-form-field>
           
-              <button (click)="create()" [disabled]="!validaCampos()" class="fullWidth mat-elevation-z4" mat-flat-button color="primary">Cadastrar</button>
-              <button routerLink="../" class="fullWidth mat-elevation-z4" mat-stroked-button color="warn">Cancelar</button>
+              <button (click)="update()" [disabled]="!validaCampos()" class="fullWidth mat-elevation-z4" mat-flat-button color="primary">Atualizar</button>
+              <button routerLink="../../" class="fullWidth mat-elevation-z4" mat-stroked-button color="warn">Cancelar</button>
               
     </form>
 
