--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,9 +1,15 @@
+
+
 <div class="container">
+   
+   <!--   <mat-slide-toggle class="slide" color="warn">Slide me!</mat-slide-toggle> -->
+   
    <form class="form mat-elevation-z8">
 
       <h1>Help Desk - Dicas de um DEV</h1>
 
       <img src="assets/img/login-image.svg" alt="Help Desk - Dicas de um DEV">
+
 
       <mat-form-field class="full-width" appearance="outline">
          <mat-label>E-mail</mat-label>
@@ -17,6 +23,7 @@
          <mat-icon matSuffix>email</mat-icon>
       </mat-form-field>
 
+      
       <mat-form-field class="full-width" appearance="outline">
          <mat-label>Senha</mat-label>
          <input 
