--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -22,6 +22,12 @@
              <i class="material-icons">code</i>
              Github
           </a>
+
+          <a mat-list-item href="https://www.linkedin.com/in/bruno-rodrigues-301753135/" target="_blank">
+            <i class="material-icons">mail</i>
+            Linkedin
+         </a>
+
           <a mat-list-item (click)="logout()">
              <i class="material-icons">logout</i>
              Logout
