--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -1,10 +1,13 @@
 .container {
    height: 100%;
-   background: linear-gradient(180deg, rgba(2,0,36,1) 0%, rgba(37,97,207,1) 0%, rgba(0,212,255,1) 100%);
+   background: linear-gradient(180deg, rgba(2,0,36,1) 0%, rgb(50, 73, 114) 0%, rgb(14, 82, 95) 100%);
    display: flex;
    align-items: center;
    justify-content: center;
 }
+
+
+
 
 .form {
    width: 30rem;
