--- a/src/app/components/chamado/chamado-read/chamado-read.component.html
+++ b/src/app/components/chamado/chamado-read/chamado-read.component.html
@@ -79,5 +79,5 @@
 
    <button routerLink="../../" class="full-width mat-elevation-z4" mat-stroked-button color="warn">Retornar</button>
 
-   <p class="full-width">Desnvolvido por Bruno Rodrigues</p>
+   <p class="full-width">Desenvolvido por Bruno Rodrigues</p>
 </div>
